@@ -1,5 +1,8 @@
 # Zwischenergebnisse vom Kompilieren
 *.[doa]
 
+tronbot
+core
+
 # Fremdcode
 freiesmagazin-2014-10-contest/
