@@ -16,9 +16,9 @@ BOTA="../src/tronbot"
 #BOTB="../src/tronbot"
 BOTB="bots/dummybot/bot"
 
-#SPIELRASTER="../Spielraster/simple.txt"
+SPIELRASTER="../Spielraster/simple.txt"
 #SPIELRASTER="../Spielraster/50x50.txt"
-SPIELRASTER="../Spielraster/5x5.txt"
+#SPIELRASTER="../Spielraster/5x5.txt"
 #SPIELRASTER="../Spielraster/10x10.txt"
 #SPIELRASTER="../Spielraster/Ring.txt"
 #SPIELRASTER="../Spielraster/Labyrinth.txt"
