@@ -71,6 +71,8 @@ Richtung& operator--(Richtung& richtung);
 Richtung& operator+=(Richtung& richtung, Bewegungsrichtung bewegungsrichtung);
 // Richtung entsprechend Bewegungsrichtung verändert
 Richtung operator+(Richtung richtung, Bewegungsrichtung bewegungsrichtung);
+// die Bewegungsrichtung von lhs nach rhs
+Bewegungsrichtung operator-(Richtung lhs, Richtung rhs);
 
 // Bewegungsrichtung ausgeben
 ostream& operator<<(ostream& ostr, Bewegungsrichtung const& bewegungsrichtung);
