@@ -1,3 +1,6 @@
+2014-11-21
+	- UI: Spielraster wird dargestellt
+
 2014-11-20
 	- UI weiter aufgeteilt (Text und Gtkmm)
 
